--- a/library_management.csproj
+++ b/library_management.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="MailKit" Version="4.9.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
@@ -22,6 +23,7 @@
     <Folder Include="wwwroot\images\" />
     <Folder Include="wwwroot\libraryimages\" />
     <Folder Include="wwwroot\assets\" />
+    <Folder Include="wwwroot\Bookimages\" />
   </ItemGroup>
 
 </Project>
