added real time payment razorpay test mode for member side

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,9 @@
     "SenderEmail": "tester.vikash022@gmail.com",
     "SenderPassword": "horo xjqn dtly xfct",
     "EnableSsl": true
+  },
+  "Razorpay": {
+    "KeyId": "rzp_test_TuMnDefva6xmie",
+    "KeySecret": "XOVGMbdHidnpBf1LM9bLiKoj"
   }
 }
