solved error in razorpay and added landing page

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DbContext": "Server=NISHANTSHARMA\\SQLEXPRESS;Database=library_management_main;Trusted_Connection=True;TrustServerCertificate=True; "
+    "DbContext": "Server=NISHANTSHARMA;Database=library_management_main;Trusted_Connection=True;TrustServerCertificate=True; "
   },
   "SmtpSettings": {
     "Server": "smtp.gmail.com",
